<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".TaskEditor">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center"
        android:text="@string/tugas"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sdp" />

    <EditText
        android:id="@+id/title"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_21sdp"
        android:hint="@string/judul" />

    <EditText
        android:id="@+id/description"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:hint="@string/deskripsi" />

    <TextView
        android:id="@+id/due_date"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:hint="@string/tanggal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_11sdp"
        android:background="@drawable/edit_text"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <RadioGroup
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/active"
                style="@style/radio_button"
                android:text="@string/aktif" />

            <RadioButton
                android:id="@+id/done"
                style="@style/radio_button"
                android:text="@string/selesai" />

            <RadioButton
                android:id="@+id/delayed"
                style="@style/radio_button"
                android:text="@string/tunda" />

            <RadioButton
                android:id="@+id/none"
                style="@style/radio_button"
                android:text="@string/none" />

        </RadioGroup>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/cerulean"
        android:minWidth="@dimen/_163sdp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:cornerRadius="@dimen/_10sdp" />


    <Button
        android:id="@+id/delete"
        style="@style/button"
        android:layout_width="@dimen/_163sdp"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>